<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="loginViewModel"
            type="com.example.snapventuremultiplayer.ui.auth.login.LoginViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp"
        tools:context=".ui.auth.AuthActivity">

        <ImageView
            android:id="@+id/iv_logo_login"
            android:layout_width="196dp"
            android:layout_height="196dp"
            android:src="@drawable/logo_title" />

        <!-- Icon diganti jadi outline -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iet_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_email"
                android:inputType="textEmailAddress"
                android:text="@={loginViewModel.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iet_pass_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:text="@={loginViewModel.password}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_lupapass_login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:text="@string/login_text_lupa_password"
            android:textAlignment="viewEnd"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingEnd="80dp"
            android:paddingStart="80dp"
            android:text="@string/login_text_login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:cornerRadius="25dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login_text_atau" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register_login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login_text_register"
            android:textAllCaps="false" />

    </LinearLayout>

</layout>